--- a/resources/assets/sass/partials/_headings.scss
+++ b/resources/assets/sass/partials/_headings.scss
@@ -3,11 +3,15 @@
   margin-bottom: 0;
   padding-bottom: 1em;
   text-align: center;
-  line-height: 1; }
-  .page-heading:after {
+  line-height: 1;
+
+  &:after{
     content: '';
     width: 70px;
     height: 3px;
     display: block;
-    background: #F6624A;
-    margin: 40px auto 0; }
+    background: $brandColor;
+    margin: 40px auto 0;
+  }
+}
+
